--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
-    "body-parser": "^1.20.4",
-    "express": "^4.22.1",
-    "multer": "^2.0.2",
-    "sqlite3": "^5.1.7"
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "multer": "^1.4.5-lts.1",
+    "sqlite3": "^5.1.6"
   }
 }
